# linear-regression-model

./: CMakeLists.txt  linreg.cpp  neuralnet  vec.h
linearegression/: linreg.cpp
logisticregression/: logreg  logreg.cpp  logregV.cpp  logreg_fullmv.cpp  logregclass  logregvm  logregvm.cpp  test_runner.cpp
logisticregression/fullvecmath/: logreg_fullmv.cpp
logisticregression/modelclass/: logreg_class  logreg_class.cpp
matvec/: mat.cpp  mat.h  vec.cpp
neuralnetwork/: neural_net.cpp
src/logisticregression/partialvecmath/: logreg_vecmath.cpp
src/matvec/: mat.cpp  mat.h  vec.h
src/neuralnetwork/: neural_net.cpp
